--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Daily Journal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="styles\journal.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/journal.css" />
     
 </head>
 <body>
@@ -27,5 +27,6 @@
             <button>Record Journal Entry</button>
         </fieldset>
     </form>
+    <script src="scripts/journal.js"></script>
 </body>
 </html>
