--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <label for="conceptsCovered" id="concepts">Concepts Covered</label>
             <input type="text">
             <label for="journalEntry">Journal Entry</label>
-            <textarea></textarea>
+            <textarea rows="10" cols="70"></textarea>
             <label for="moodForTheDay">Mood For The Day</label>
             <select name="moods" id="moodForTheDay">
                 <option value="Sad">Sad</option>
@@ -27,6 +27,6 @@
             <button>Record Journal Entry</button>
         </fieldset>
     </form>
-    <script src="scripts/journal.js"></script>
+<script src="./scripts/journal.js"></script>
 </body>
 </html>
